--June 1, 2009--
-Appropriate kpart shown when an item is selected from the tree in the Edit tab.