@@ -1,2 +1,5 @@
 --June 1, 2009--
 -Appropriate kpart shown when an item is selected from the tree in the Edit tab.
+
+--June 24, 2009--
+-Simple 'Pick wallpaper plugin' functionality added to previewer
